--- a/src/app/appConfig.json
+++ b/src/app/appConfig.json
@@ -2,8 +2,8 @@
   "sidenav": [
     { "label": "App 1", "app": "RegistrationFormV1" },
     { "label": "App 2", "app": "RegistrationFormV2" },
-    { "label": "App 3", "app": "LoggedInPage" },
+    { "label": "App 3", "app": "Profile" },
     { "label": "App 4", "app": "ReactFlowDiagram" },
-    { "label": "App 5", "app": "SignInPage" }
+    { "label": "App 5", "app": "SignIn" }
   ]
 }
