--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@xyflow/react": "^12.0.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-flow-renderer": "^10.3.17",
     "react-redux": "^9.1.2",
+    "reactflow": "^11.11.4",
     "redux": "^5.0.1"
   },
   "devDependencies": {
