--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.6.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@xyflow/react": "^12.0.4",
     "next": "14.2.5",
